<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/text_sort_type"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radio_group_ascend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button_sort_ascend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_ascend" />

        <RadioButton
            android:id="@+id/radio_button_sort_descend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_descend" />
    </RadioGroup>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/primary_color" />

    <RadioGroup
        android:id="@+id/radio_group_sort_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_button_sort_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_id" />

        <RadioButton
            android:id="@+id/radio_button_sort_id2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_title" />

        <RadioButton
            android:id="@+id/radio_button_sort_id3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_username" />

        <RadioButton
            android:id="@+id/radio_button_sort_id4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_money" />

        <RadioButton
            android:id="@+id/radio_button_sort_id5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_date" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="20dp"
        android:background="@color/primary_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="取消"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/primary_color" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="确认"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>
</LinearLayout>
